# nhsdigital.clinical-data-gateway-api

./: .gitattributes  .gitignore  Makefile  scratch.txt
gateway-api/: lambda_handler.py  main.py  pyproject.toml
gateway-api/src/gateway_api/: handler.py  routes.py
infrastructure/images/build-container/: Dockerfile
infrastructure/images/build-container/resources/: buildkitd.toml.temp  entry-point.sh  template-buildkitd.toml.sh
infrastructure/images/gateway-api/: Dockerfile
